where.scanner.cpp
/* Generated by re2c 0.14.3 on Wed Nov 18 13:50:10 2015 */
#line 1 "/home/veei/src/calculator/where.scanner.re"
/**
 * re2c scanner definition
 * vim: set ts=4 sw=4 tw=0 et syntax=cpp:
 */

#include "where.scanner.h"

#include <string>
#include <algorithm>

namespace scanner
{
namespace where
{

#line 19 "/home/veei/src/calculator/where.scanner.cpp"


#line 16 "/home/veei/src/calculator/where.scanner.re"

CToken CScanner::operator()(const std::string& expression, CState& state) const
{
beginning:
    {
        std::string::const_pointer marker;
        std::string::const_pointer cursor = expression.c_str() + state.offset();
        std::string::const_pointer p_start = expression.c_str() + state.offset();
        size_t start = state.offset();


#line 34 "/home/veei/src/calculator/where.scanner.cpp"
        {
            unsigned char yych;
            unsigned int yyaccept = 0;

            yych = (unsigned char)*(marker = cursor);
            switch (yych) {
            case 0x00:    goto yy46;
            case 0x01:
            case 0x02:
            case 0x03:
            case 0x04:
            case 0x05:
            case 0x06:
            case 0x07:
            case 0x08:
            case '\v':
            case '\f':
            case 0x0E:
            case 0x0F:
            case 0x10:
            case 0x11:
            case 0x12:
            case 0x13:
            case 0x14:
            case 0x15:
            case 0x16:
            case 0x17:
            case 0x18:
            case 0x19:
            case 0x1A:
            case 0x1B:
            case 0x1C:
            case 0x1D:
            case 0x1E:
            case 0x1F:
            case '#':
            case '$':
            case ',':
            case ':':
            case ';':
            case '?':
            case '@':
            case '[':
            case '\\':
            case ']':
            case '^':
            case '`':
            case '{':
            case '}':
            case '~':
            case 0x7F:    goto yy48;
            case '\t':
            case '\n':
            case '\r':
            case ' ':    goto yy3;
            case '!':    goto yy17;
            case '"':    goto yy38;
            case '%':    goto yy32;
            case '&':    goto yy21;
            case '\'':    goto yy9;
            case '(':    goto yy42;
            case ')':    goto yy44;
            case '*':    goto yy34;
            case '+':    goto yy26;
            case '-':    goto yy28;
            case '.':    goto yy40;
            case '/':    goto yy30;
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':    goto yy7;
            case '<':    goto yy11;
            case '=':    goto yy15;
            case '>':    goto yy13;
            case 'A':
            case 'a':    goto yy22;
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'G':
            case 'H':
            case 'J':
            case 'K':
            case 'M':
            case 'P':
            case 'Q':
            case 'S':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'g':
            case 'h':
            case 'j':
            case 'k':
            case 'm':
            case 'p':
            case 'q':
            case 's':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':    goto yy39;
            case 'F':
            case 'f':    goto yy6;
            case 'I':
            case 'i':    goto yy20;
            case 'L':
            case 'l':    goto yy19;
            case 'N':
            case 'n':    goto yy25;
            case 'O':
            case 'o':    goto yy24;
            case 'R':
            case 'r':    goto yy37;
            case 'T':
            case 't':    goto yy4;
            case 'U':
            case 'u':    goto yy36;
            case '|':    goto yy23;
            case 0xC2:
            case 0xC3:
            case 0xC4:
            case 0xC5:
            case 0xC6:
            case 0xC7:
            case 0xC8:
            case 0xC9:
            case 0xCA:
            case 0xCB:
            case 0xCC:
            case 0xCD:
            case 0xCE:
            case 0xCF:
            case 0xD0:
            case 0xD1:
            case 0xD2:
            case 0xD3:
            case 0xD4:
            case 0xD5:
            case 0xD6:
            case 0xD7:
            case 0xD8:
            case 0xD9:
            case 0xDA:
            case 0xDB:
            case 0xDC:
            case 0xDD:
            case 0xDE:
            case 0xDF:    goto yy49;
            case 0xE0:    goto yy51;
            case 0xE1:
            case 0xE2:
            case 0xE3:
            case 0xE4:
            case 0xE5:
            case 0xE6:
            case 0xE7:
            case 0xE8:
            case 0xE9:
            case 0xEA:
            case 0xEB:
            case 0xEC:
            case 0xED:
            case 0xEE:
            case 0xEF:    goto yy52;
            case 0xF0:    goto yy53;
            case 0xF1:
            case 0xF2:
            case 0xF3:    goto yy54;
            case 0xF4:    goto yy55;
            default:    goto yy2;
            }
yy2:
#line 68 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); goto beginning; }
#line 225 "/home/veei/src/calculator/where.scanner.cpp"
yy3:
            yych = (unsigned char)*++cursor;
            goto yy137;
yy4:
            ++cursor;
            switch ((yych = (unsigned char)*cursor)) {
            case 'R':
            case 'r':    goto yy134;
            default:    goto yy57;
            }
yy5:
#line 113 "/home/veei/src/calculator/where.scanner.re"
            {
    state.move(cursor - p_start);
    std::string var = expression.substr(start, cursor - p_start);
    std::transform(var.begin(), var.end(), var.begin(), ::toupper);
    return CToken(ET_WHERE_IDENTIFIER, var);
}
#line 244 "/home/veei/src/calculator/where.scanner.cpp"
yy6:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'A':
            case 'a':    goto yy129;
            default:    goto yy57;
            }
yy7:
            yyaccept = 1;
            yych = (unsigned char)*(marker = ++cursor);
            switch (yych) {
            case '.':    goto yy120;
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':    goto yy124;
            case 'E':
            case 'e':    goto yy123;
            default:    goto yy8;
            }
yy8:
#line 70 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_INTEGER, expression.substr(start, cursor - p_start)); }
#line 274 "/home/veei/src/calculator/where.scanner.cpp"
yy9:
            yyaccept = 2;
            yych = (unsigned char)*(marker = ++cursor);
            switch (yych) {
            case 0x01:
            case 0x02:
            case 0x03:
            case 0x04:
            case 0x05:
            case 0x06:
            case 0x07:
            case 0x08:
            case '\t':
            case '\n':
            case '\v':
            case '\f':
            case '\r':
            case 0x0E:
            case 0x0F:
            case 0x10:
            case 0x11:
            case 0x12:
            case 0x13:
            case 0x14:
            case 0x15:
            case 0x16:
            case 0x17:
            case 0x18:
            case 0x19:
            case 0x1A:
            case 0x1B:
            case 0x1C:
            case 0x1D:
            case 0x1E:
            case 0x1F:
            case ' ':
            case '!':
            case '"':
            case '#':
            case '$':
            case '%':
            case '&':
            case '\'':
            case '(':
            case ')':
            case '*':
            case '+':
            case ',':
            case '-':
            case '.':
            case '/':
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case ':':
            case ';':
            case '<':
            case '=':
            case '>':
            case '?':
            case '@':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '[':
            case '\\':
            case ']':
            case '^':
            case '_':
            case '`':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
            case '{':
            case '|':
            case '}':
            case '~':
            case 0x7F:
            case 0xC2:
            case 0xC3:
            case 0xC4:
            case 0xC5:
            case 0xC6:
            case 0xC7:
            case 0xC8:
            case 0xC9:
            case 0xCA:
            case 0xCB:
            case 0xCC:
            case 0xCD:
            case 0xCE:
            case 0xCF:
            case 0xD0:
            case 0xD1:
            case 0xD2:
            case 0xD3:
            case 0xD4:
            case 0xD5:
            case 0xD6:
            case 0xD7:
            case 0xD8:
            case 0xD9:
            case 0xDA:
            case 0xDB:
            case 0xDC:
            case 0xDD:
            case 0xDE:
            case 0xDF:
            case 0xE0:
            case 0xE1:
            case 0xE2:
            case 0xE3:
            case 0xE4:
            case 0xE5:
            case 0xE6:
            case 0xE7:
            case 0xE8:
            case 0xE9:
            case 0xEA:
            case 0xEB:
            case 0xEC:
            case 0xED:
            case 0xEE:
            case 0xEF:
            case 0xF0:
            case 0xF1:
            case 0xF2:
            case 0xF3:
            case 0xF4:    goto yy110;
            default:    goto yy10;
            }
yy10:
#line 130 "/home/veei/src/calculator/where.scanner.re"
            { return CToken(CToken::ET_ERROR, expression.substr(start, cursor - p_start)); }
#line 462 "/home/veei/src/calculator/where.scanner.cpp"
yy11:
            ++cursor;
            switch ((yych = (unsigned char)*cursor)) {
            case '=':    goto yy107;
            case '>':    goto yy102;
            default:    goto yy12;
            }
yy12:
#line 78 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_LESS, expression.substr(start, cursor - p_start)); }
#line 473 "/home/veei/src/calculator/where.scanner.cpp"
yy13:
            ++cursor;
            switch ((yych = (unsigned char)*cursor)) {
            case '=':    goto yy105;
            default:    goto yy14;
            }
yy14:
#line 79 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_GREATER, expression.substr(start, cursor - p_start)); }
#line 483 "/home/veei/src/calculator/where.scanner.cpp"
yy15:
            ++cursor;
            switch ((yych = (unsigned char)*cursor)) {
            case '=':    goto yy104;
            default:    goto yy16;
            }
yy16:
#line 76 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_EQUAL, expression.substr(start, cursor - p_start)); }
#line 493 "/home/veei/src/calculator/where.scanner.cpp"
yy17:
            ++cursor;
            switch ((yych = (unsigned char)*cursor)) {
            case '=':    goto yy102;
            default:    goto yy18;
            }
yy18:
#line 87 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_NOT, expression.substr(start, cursor - p_start)); }
#line 503 "/home/veei/src/calculator/where.scanner.cpp"
yy19:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'I':
            case 'i':    goto yy98;
            default:    goto yy57;
            }
yy20:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'S':
            case 's':    goto yy87;
            default:    goto yy57;
            }
yy21:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case '&':    goto yy86;
            default:    goto yy10;
            }
yy22:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'N':
            case 'n':    goto yy83;
            default:    goto yy57;
            }
yy23:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case '|':    goto yy82;
            default:    goto yy10;
            }
yy24:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'R':
            case 'r':    goto yy80;
            default:    goto yy57;
            }
yy25:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'O':
            case 'o':    goto yy74;
            case 'U':
            case 'u':    goto yy75;
            default:    goto yy57;
            }
yy26:
            ++cursor;
#line 89 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_PLUS, expression.substr(start, cursor - p_start)); }
#line 557 "/home/veei/src/calculator/where.scanner.cpp"
yy28:
            ++cursor;
#line 90 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_MINUS, expression.substr(start, cursor - p_start)); }
#line 562 "/home/veei/src/calculator/where.scanner.cpp"
yy30:
            ++cursor;
#line 92 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_DIVIDE, expression.substr(start, cursor - p_start)); }
#line 567 "/home/veei/src/calculator/where.scanner.cpp"
yy32:
            ++cursor;
#line 93 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_MOD, expression.substr(start, cursor - p_start)); }
#line 572 "/home/veei/src/calculator/where.scanner.cpp"
yy34:
            ++cursor;
#line 94 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_TIMES, expression.substr(start, cursor - p_start)); }
#line 577 "/home/veei/src/calculator/where.scanner.cpp"
yy36:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'N':
            case 'n':    goto yy72;
            default:    goto yy57;
            }
yy37:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 'E':
            case 'e':    goto yy68;
            default:    goto yy57;
            }
yy38:
            yyaccept = 2;
            yych = (unsigned char)*(marker = ++cursor);
            switch (yych) {
            case 0x01:
            case 0x02:
            case 0x03:
            case 0x04:
            case 0x05:
            case 0x06:
            case 0x07:
            case 0x08:
            case '\t':
            case '\n':
            case '\v':
            case '\f':
            case '\r':
            case 0x0E:
            case 0x0F:
            case 0x10:
            case 0x11:
            case 0x12:
            case 0x13:
            case 0x14:
            case 0x15:
            case 0x16:
            case 0x17:
            case 0x18:
            case 0x19:
            case 0x1A:
            case 0x1B:
            case 0x1C:
            case 0x1D:
            case 0x1E:
            case 0x1F:
            case ' ':
            case '!':
            case '#':
            case '$':
            case '%':
            case '&':
            case '\'':
            case '(':
            case ')':
            case '*':
            case '+':
            case ',':
            case '-':
            case '.':
            case '/':
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case ':':
            case ';':
            case '<':
            case '=':
            case '>':
            case '?':
            case '@':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '[':
            case '\\':
            case ']':
            case '^':
            case '_':
            case '`':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':
            case '{':
            case '|':
            case '}':
            case '~':
            case 0x7F:
            case 0xC2:
            case 0xC3:
            case 0xC4:
            case 0xC5:
            case 0xC6:
            case 0xC7:
            case 0xC8:
            case 0xC9:
            case 0xCA:
            case 0xCB:
            case 0xCC:
            case 0xCD:
            case 0xCE:
            case 0xCF:
            case 0xD0:
            case 0xD1:
            case 0xD2:
            case 0xD3:
            case 0xD4:
            case 0xD5:
            case 0xD6:
            case 0xD7:
            case 0xD8:
            case 0xD9:
            case 0xDA:
            case 0xDB:
            case 0xDC:
            case 0xDD:
            case 0xDE:
            case 0xDF:
            case 0xE0:
            case 0xE1:
            case 0xE2:
            case 0xE3:
            case 0xE4:
            case 0xE5:
            case 0xE6:
            case 0xE7:
            case 0xE8:
            case 0xE9:
            case 0xEA:
            case 0xEB:
            case 0xEC:
            case 0xED:
            case 0xEE:
            case 0xEF:
            case 0xF0:
            case 0xF1:
            case 0xF2:
            case 0xF3:
            case 0xF4:    goto yy59;
            default:    goto yy10;
            }
yy39:
            yych = (unsigned char)*++cursor;
            goto yy57;
yy40:
            ++cursor;
#line 121 "/home/veei/src/calculator/where.scanner.re"
            {
    state.move(cursor - p_start);
    return CToken(ET_WHERE_DOT, expression.substr(start, cursor - p_start));
}
#line 785 "/home/veei/src/calculator/where.scanner.cpp"
yy42:
            ++cursor;
#line 126 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_LEFT_P, expression.substr(start, cursor - p_start)); }
#line 790 "/home/veei/src/calculator/where.scanner.cpp"
yy44:
            ++cursor;
#line 127 "/home/veei/src/calculator/where.scanner.re"
            { state.move(cursor - p_start); return CToken(ET_WHERE_RIGHT_P, expression.substr(start, cursor - p_start)); }
#line 795 "/home/veei/src/calculator/where.scanner.cpp"
yy46:
            ++cursor;
#line 129 "/home/veei/src/calculator/where.scanner.re"
            { return CToken(CToken::ET_EOF, expression.substr(start, cursor - p_start)); }
#line 800 "/home/veei/src/calculator/where.scanner.cpp"
yy48:
            yych = (unsigned char)*++cursor;
            goto yy10;
yy49:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 0x80:
            case 0x81:
            case 0x82:
            case 0x83:
            case 0x84:
            case 0x85:
            case 0x86:
            case 0x87:
            case 0x88:
            case 0x89:
            case 0x8A:
            case 0x8B:
            case 0x8C:
            case 0x8D:
            case 0x8E:
            case 0x8F:
            case 0x90:
            case 0x91:
            case 0x92:
            case 0x93:
            case 0x94:
            case 0x95:
            case 0x96:
            case 0x97:
            case 0x98:
            case 0x99:
            case 0x9A:
            case 0x9B:
            case 0x9C:
            case 0x9D:
            case 0x9E:
            case 0x9F:
            case 0xA0:
            case 0xA1:
            case 0xA2:
            case 0xA3:
            case 0xA4:
            case 0xA5:
            case 0xA6:
            case 0xA7:
            case 0xA8:
            case 0xA9:
            case 0xAA:
            case 0xAB:
            case 0xAC:
            case 0xAD:
            case 0xAE:
            case 0xAF:
            case 0xB0:
            case 0xB1:
            case 0xB2:
            case 0xB3:
            case 0xB4:
            case 0xB5:
            case 0xB6:
            case 0xB7:
            case 0xB8:
            case 0xB9:
            case 0xBA:
            case 0xBB:
            case 0xBC:
            case 0xBD:
            case 0xBE:
            case 0xBF:    goto yy48;
            default:    goto yy50;
            }
yy50:
            cursor = marker;
            switch (yyaccept) {
            case 0: 	goto yy2;
            case 1: 	goto yy8;
            case 2: 	goto yy10;
            case 3: 	goto yy88;
            default:	goto yy122;
            }
yy51:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 0xA0:
            case 0xA1:
            case 0xA2:
            case 0xA3:
            case 0xA4:
            case 0xA5:
            case 0xA6:
            case 0xA7:
            case 0xA8:
            case 0xA9:
            case 0xAA:
            case 0xAB:
            case 0xAC:
            case 0xAD:
            case 0xAE:
            case 0xAF:
            case 0xB0:
            case 0xB1:
            case 0xB2:
            case 0xB3:
            case 0xB4:
            case 0xB5:
            case 0xB6:
            case 0xB7:
            case 0xB8:
            case 0xB9:
            case 0xBA:
            case 0xBB:
            case 0xBC:
            case 0xBD:
            case 0xBE:
            case 0xBF:    goto yy49;
            default:    goto yy50;
            }
yy52:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 0x80:
            case 0x81:
            case 0x82:
            case 0x83:
            case 0x84:
            case 0x85:
            case 0x86:
            case 0x87:
            case 0x88:
            case 0x89:
            case 0x8A:
            case 0x8B:
            case 0x8C:
            case 0x8D:
            case 0x8E:
            case 0x8F:
            case 0x90:
            case 0x91:
            case 0x92:
            case 0x93:
            case 0x94:
            case 0x95:
            case 0x96:
            case 0x97:
            case 0x98:
            case 0x99:
            case 0x9A:
            case 0x9B:
            case 0x9C:
            case 0x9D:
            case 0x9E:
            case 0x9F:
            case 0xA0:
            case 0xA1:
            case 0xA2:
            case 0xA3:
            case 0xA4:
            case 0xA5:
            case 0xA6:
            case 0xA7:
            case 0xA8:
            case 0xA9:
            case 0xAA:
            case 0xAB:
            case 0xAC:
            case 0xAD:
            case 0xAE:
            case 0xAF:
            case 0xB0:
            case 0xB1:
            case 0xB2:
            case 0xB3:
            case 0xB4:
            case 0xB5:
            case 0xB6:
            case 0xB7:
            case 0xB8:
            case 0xB9:
            case 0xBA:
            case 0xBB:
            case 0xBC:
            case 0xBD:
            case 0xBE:
            case 0xBF:    goto yy49;
            default:    goto yy50;
            }
yy53:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 0x90:
            case 0x91:
            case 0x92:
            case 0x93:
            case 0x94:
            case 0x95:
            case 0x96:
            case 0x97:
            case 0x98:
            case 0x99:
            case 0x9A:
            case 0x9B:
            case 0x9C:
            case 0x9D:
            case 0x9E:
            case 0x9F:
            case 0xA0:
            case 0xA1:
            case 0xA2:
            case 0xA3:
            case 0xA4:
            case 0xA5:
            case 0xA6:
            case 0xA7:
            case 0xA8:
            case 0xA9:
            case 0xAA:
            case 0xAB:
            case 0xAC:
            case 0xAD:
            case 0xAE:
            case 0xAF:
            case 0xB0:
            case 0xB1:
            case 0xB2:
            case 0xB3:
            case 0xB4:
            case 0xB5:
            case 0xB6:
            case 0xB7:
            case 0xB8:
            case 0xB9:
            case 0xBA:
            case 0xBB:
            case 0xBC:
            case 0xBD:
            case 0xBE:
            case 0xBF:    goto yy52;
            default:    goto yy50;
            }
yy54:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 0x80:
            case 0x81:
            case 0x82:
            case 0x83:
            case 0x84:
            case 0x85:
            case 0x86:
            case 0x87:
            case 0x88:
            case 0x89:
            case 0x8A:
            case 0x8B:
            case 0x8C:
            case 0x8D:
            case 0x8E:
            case 0x8F:
            case 0x90:
            case 0x91:
            case 0x92:
            case 0x93:
            case 0x94:
            case 0x95:
            case 0x96:
            case 0x97:
            case 0x98:
            case 0x99:
            case 0x9A:
            case 0x9B:
            case 0x9C:
            case 0x9D:
            case 0x9E:
            case 0x9F:
            case 0xA0:
            case 0xA1:
            case 0xA2:
            case 0xA3:
            case 0xA4:
            case 0xA5:
            case 0xA6:
            case 0xA7:
            case 0xA8:
            case 0xA9:
            case 0xAA:
            case 0xAB:
            case 0xAC:
            case 0xAD:
            case 0xAE:
            case 0xAF:
            case 0xB0:
            case 0xB1:
            case 0xB2:
            case 0xB3:
            case 0xB4:
            case 0xB5:
            case 0xB6:
            case 0xB7:
            case 0xB8:
            case 0xB9:
            case 0xBA:
            case 0xBB:
            case 0xBC:
            case 0xBD:
            case 0xBE:
            case 0xBF:    goto yy52;
            default:    goto yy50;
            }
yy55:
            yych = (unsigned char)*++cursor;
            switch (yych) {
            case 0x80:
            case 0x81:
            case 0x82:
            case 0x83:
            case 0x84:
            case 0x85:
            case 0x86:
            case 0x87:
            case 0x88:
            case 0x89:
            case 0x8A:
            case 0x8B:
            case 0x8C:
            case 0x8D:
            case 0x8E:
            case 0x8F:    goto yy52;
            default:    goto yy50;
            }
yy56:
            ++cursor;
            yych = (unsigned char)*cursor;
yy57:
            switch (yych) {
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case 'A':
            case 'B':
            case 'C':
            case 'D':
            case 'E':
            case 'F':
            case 'G':
            case 'H':
            case 'I':
            case 'J':
            case 'K':
            case 'L':
            case 'M':
            case 'N':
            case 'O':
            case 'P':
            case 'Q':
            case 'R':
            case 'S':
            case 'T':
            case 'U':
            case 'V':
            case 'W':
            case 'X':
            case 'Y':
            case 'Z':
            case '_':
            case 'a':
            case 'b':
            case 'c':
            case 'd':
            case 'e':
            case 'f':
            case 'g':
            case 'h':
            case 'i':
            case 'j':
            case 'k':
            case 'l':
            case 'm':
            case 'n':
            case 'o':
            case 'p':
            case 'q':
            case 'r':
            case 's':
            case 't':
            case 'u':
            case 'v':
            case 'w':
            case 'x':
            case 'y':
            case 'z':    goto yy56;
            default:    goto yy5;
            }
yy58:
            ++cursor;
            yych = (unsigned char)*cursor;
yy59:
            switch (yych) {
            case 0x01:
            case 0x02:
            case 0x03:
            case 0x04:
            case 0x05:
            case 0x06:
            case 0x07:
            case 0x08:
            case '\t':
            case '\n':
            case '\v':
            case '\f':
            case '\r':
            case 0x0E:
            case 0x0F:
            case 0x10:
            case 0x11:
            case 0x12:
            case 0x13:
            case 0x14:
            case 0x15:
            case 0x16:
            case 0x17:
            case 0x18:
            case 0x19:
            case 0x1A:
            case 0x1B:
            case 0x1C:
            case 0x1D:
            case 0x1E:
            case 0x1F:
            case ' ':
            case '!':
            case '#':
            case '$':
            case '%':
            case '&':
            case '\'':
            case '(':
            case ')':
            case '*':
            case '+':
            case ',':
            case '-':
            case '.':
            case '/':
            case '0':
            case '1':
            case '2':
            case '3':
            case '4':
            case '5':
            case '6':
            case '7':
            case '8':
            case '9':
            case ':':
            case ';':
            case '<':
            case '=':
            case '>':
            case '?':
            case '@':
